--- a/apps/create_vm/index.Rmd
+++ b/apps/create_vm/index.Rmd
@@ -3,7 +3,7 @@ title: "Create a Virtual Machine"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
-    vertical_layout: fill
+    vertical_layout: scroll
 runtime: shiny
 ---
 
@@ -16,6 +16,7 @@ library(googleAuthR)
 library(dplyr)
 library(tibble)
 library(googleComputeEngineR)
+library(DT)
 ```
 
 ```{r auth, include = FALSE}
@@ -69,7 +70,7 @@ actionButton("create_image", "Create Image")
 
 ```
 
-Column
+Column {data-width=600}
 -------------------------------------
 
 ```{r, include=FALSE}
@@ -82,29 +83,48 @@ reactive({
 ### Description of Machine Types
 
 ```{r}
+# x = gcloud::gcloud_compute_machineTypes_list()
+# x = x[is.na(x$deprecated$state),]
+# x = x %>%
+#   mutate(memory = round(memoryMb/1024)) %>%
+#   select(name, guestCpus, memory, description, zone)
+# saveRDS(x, "machine_types.rds", compress = "xz")
 machines = reactive({
-  x = gcloud::gcloud_compute_machineTypes_list(
-    zone = input$zone)
-  x = x[is.na(x$deprecated$state),]
+  # x = gcloud::gcloud_compute_machineTypes_list(
+  #   zone = input$zone)
+  # x = gcloud::gcloud_compute_machineTypes_list()
+  # x = x[is.na(x$deprecated$state),]
+  # x = x %>% 
+  #   mutate(memory = round(memoryMb/1024)) %>% 
+  #   select(name, guestCpus, memory, description)
+  x = readRDS("machine_types.rds")
   x = x %>% 
-    mutate(memory = round(memoryMb/1024)) %>% 
-    select(name, guestCpus, memory, description)
+    dplyr::filter(zone %in% input$zone)
 })
 output$machiner = renderUI({
   x = machines()
+  x$zone = NULL
   selectizeInput("machine_type", label = "Machine Type", 
                  choices = x$name, selected = "n1-standard-4")
 })
-renderDataTable({
-  machines()
-}, options = list(dom = 't'))
+DT::renderDataTable({
+  x = machines()
+  x$zone = NULL
+  x
+}, options = list(dom = "t", autoWidth = TRUE), 
+filter = "top")
 ```
 
+Column {data-width=400}
+-------------------------------------
 ### Current VMs Running
 
 ```{r}
 renderTable({
-  the_list <- gce_list_instances(project = input$project, zone = input$zone)
+  the_list <- try({
+    gce_list_instances(project = input$project, zone = input$zone)
+  })
+  if (inherits(the_list, "try-error")) return(NULL)
   df = tibble::as_tibble(the_list)
   df = df$items
   if (!is.null(df) && nrow(df) > 0) {
@@ -166,6 +186,7 @@ observeEvent(input$create_image, {
     region = gcloud:::region_from_zone(input$zone)
     gcloud::gcloud_compute_nat_create(region = region, verbose = 2,
                                       project = input$project)
+    googleComputeEngineR::gce_global_project(project = input$project)
     vm <- googleComputeEngineR::gce_vm(
       template = "rstudio-noauth",
       name = input$vm_name,
