--- a/apps/create_vm/index.Rmd
+++ b/apps/create_vm/index.Rmd
@@ -41,8 +41,36 @@ projects = gcloud::gcloud_projects_list()$projectId
 
 
 ```{r, include = FALSE}
-zones = c("us-east4-c", 
-          gcloud::gcloud_compute_zones_list()$name)
+if (!is.null(project)) {
+# zones = c("us-east4-c", 
+#           gcloud::gcloud_compute_zones_list(
+#             project = project)$name)
+}
+zones = c("us-east4-c", "us-east1-b", "us-east1-c", "us-east1-d", "us-east4-c", 
+"us-east4-b", "us-east4-a", "us-central1-c", "us-central1-a", 
+"us-central1-f", "us-central1-b", "us-west1-b", "us-west1-c", 
+"us-west1-a", "europe-west4-a", "europe-west4-b", "europe-west4-c", 
+"europe-west1-b", "europe-west1-d", "europe-west1-c", "europe-west3-c", 
+"europe-west3-a", "europe-west3-b", "europe-west2-c", "europe-west2-b", 
+"europe-west2-a", "asia-east1-b", "asia-east1-a", "asia-east1-c", 
+"asia-southeast1-b", "asia-southeast1-a", "asia-southeast1-c", 
+"asia-northeast1-b", "asia-northeast1-c", "asia-northeast1-a", 
+"asia-south1-c", "asia-south1-b", "asia-south1-a", "australia-southeast1-b", 
+"australia-southeast1-c", "australia-southeast1-a", "southamerica-east1-b", 
+"southamerica-east1-c", "southamerica-east1-a", "asia-east2-a", 
+"asia-east2-b", "asia-east2-c", "asia-northeast2-a", "asia-northeast2-b", 
+"asia-northeast2-c", "asia-northeast3-a", "asia-northeast3-b", 
+"asia-northeast3-c", "asia-south2-a", "asia-south2-b", "asia-south2-c", 
+"asia-southeast2-a", "asia-southeast2-b", "asia-southeast2-c", 
+"australia-southeast2-a", "australia-southeast2-b", "australia-southeast2-c", 
+"europe-central2-a", "europe-central2-b", "europe-central2-c", 
+"europe-north1-a", "europe-north1-b", "europe-north1-c", "europe-west6-a", 
+"europe-west6-b", "europe-west6-c", "northamerica-northeast1-a", 
+"northamerica-northeast1-b", "northamerica-northeast1-c", "northamerica-northeast2-a", 
+"northamerica-northeast2-b", "northamerica-northeast2-c", "southamerica-west1-a", 
+"southamerica-west1-b", "southamerica-west1-c", "us-west2-a", 
+"us-west2-b", "us-west2-c", "us-west3-a", "us-west3-b", "us-west3-c", 
+"us-west4-a", "us-west4-b", "us-west4-c")
 zones = unique(zones)
 ```
 
@@ -130,7 +158,7 @@ existing_vms = reactive({
   values$refresh = isolate(values$refresh)
   the_list <- try({
     gce_list_instances(project = input$project, zone = input$zone)
-  })
+  }, silent = TRUE)
   if (inherits(the_list, "try-error")) return(NULL)
   df = tibble::as_tibble(the_list)
   df = df$items
@@ -163,7 +191,10 @@ renderTable({
 ```{r}
 run_check <- reactive({
   print("Running Checks")
-  vm_good = try({googleComputeEngineR:::validate_vm_name(input$vm_name)})
+  vm_good = try({
+    googleComputeEngineR:::validate_vm_name(input$vm_name)
+  }
+  )
   if (inherits(vm_good, "try-error")) {
     print("Your VM name is not of the form lowercase with underscores")
     print(attr(vm_good, "condition"))
